# External_Merge_Sort

./: CMakeLists.txt  README.md  claims.txt  run.sh
src/: Alloc.h  CMakeLists.txt  Filter.cpp  Filter.h  Iterator.cpp  Iterator.h  Makefile  Record.h  Scan.cpp  Scan.h  Sort.cpp  Sort.h  Sorter.cpp  Sorter.h  Tasks.txt  Test.cpp  Tree.h  Witness.cpp  Witness.h  defs.cpp  defs.h  tree.h
